# django-site-blog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
example/: README.md
example/example_project/: admin.py  apps.py  settings.py  urls.py  views.py
example/example_project/management/commands/: seed_demo.py
example/example_project/templates/example_project/: home.html
src/miniblog/: admin.py  models.py  tests.py  urls.py  views.py
src/miniblog/locale/pl/LC_MESSAGES/: django.mo
src/miniblog/migrations/: 0001_initial.py  0002_auto_20180101_2017.py  0003_alter_article_article_body.py  0004_article_sites.py
src/miniblog/templates/miniblog/: article_detail.html  base.html
src/siteblog/: apps.py  models.py  urls.py  views.py
src/siteblog/migrations/: 0001_initial.py
src/siteblog/templates/siteblog/: article_detail.html  base.html
tests/: settings.py  test_admin.py  test_apps.py  test_models.py  test_views.py  urls.py
