[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-sites-blog"
version = "0.1.0"
description = "Small Django blog/news app with multi-site support (django.contrib.sites)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Michał Pasternak", email = "michal.dtz@gmail.com" },
]
keywords = ["django", "blog", "news", "miniblog", "sites", "multi-site", "cms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django>=5.2",
    "django-model-utils>=4.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-django>=4.8",
]
dev = [
    "pre-commit",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/iplweb/django-sites-blog"
Repository = "https://github.com/iplweb/django-sites-blog"
Issues = "https://github.com/iplweb/django-sites-blog/issues"
Changelog = "https://github.com/iplweb/django-sites-blog/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
miniblog = ["templates/**/*", "locale/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/miniblog/migrations/*" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]
pythonpath = ["."]
addopts = "-ra"
