[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-site-blog"
version = "0.2.0"
description = "Small Django blog/news app with multi-site support (django.contrib.sites)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Michał Pasternak", email = "michal.dtz@gmail.com" },
]
keywords = ["django", "blog", "news", "siteblog", "sites", "multi-site", "cms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django>=5.2",
    "django-model-utils>=5,<6",
]

# User-facing extras (published in PyPI metadata; installable via
# `pip install django-site-blog[<extra>]`).
[project.optional-dependencies]
# Optional rich text editor used by the bundled `example/` demo when the
# RICH_EDITOR=1 env var is set. Not required by the published package.
rich-editor = [
    "django-tinymce>=4",
]

# Author-only tooling (PEP 735). Not shipped in PyPI metadata; installed
# locally via `uv sync` / `uv sync --all-groups`.
[dependency-groups]
test = [
    "pytest>=8",
    "pytest-django>=4.8",
]
dev = [
    "pre-commit",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/iplweb/django-site-blog"
Repository = "https://github.com/iplweb/django-site-blog"
Issues = "https://github.com/iplweb/django-site-blog/issues"
Changelog = "https://github.com/iplweb/django-site-blog/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
siteblog = ["templates/**/*", "locale/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/siteblog/migrations/*" = ["E501"]
# Demo article bodies are inline HTML literals; long lines are unavoidable.
"example/example_project/management/commands/seed_demo.py" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]
pythonpath = ["."]
addopts = "-ra"
